--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "app": "^0.1.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0"
